--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
   "name": "my-app-next",
+  "version": "1.0.0",
+  "description": "",
   "private": true,
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev-frontend": "npm --prefix ./next run dev",
+    "dev-backend": "npm --prefix ./express run dev",
+    "dev": "concurrently \"npm run dev-frontend\" \"npm run dev-backend\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "MIT",
   "dependencies": {
-    "next": "12.0.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.17",
-    "@types/react": "17.0.39",
-    "eslint": "8.9.0",
-    "eslint-config-next": "12.0.10",
-    "typescript": "4.5.5"
+    "concurrently": "^7.0.0"
   }
 }
