--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,9 +1,12 @@
 version = 1
 
+test_patterns = ["*/test/**"]
 
 [[analyzers]]
-name = "typescript"
+name = "javascript"
 enabled = true
 
   [analyzers.meta]
   plugins = ["react"]
+  environment = ["nodejs","jest","mongo"]
+  module_system = "es-modules"
