--- a/next/package.json
+++ b/next/package.json
@@ -18,10 +18,18 @@
     "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
+    "@babel/eslint-plugin": "^7.17.7",
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
-    "eslint": "8.9.0",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
+    "eslint": "^8.11.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.0.10",
-    "typescript": "4.5.5"
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "typescript": "^4.5.5"
   }
 }
