--- a/next/.eslintrc.json
+++ b/next/.eslintrc.json
@@ -24,6 +24,7 @@
         "react/react-in-jsx-scope": "off",
         // allow jsx syntax in js files (for next.js project)
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts",".tsx"] }], //should add ".ts" if typescript project
-        "react/function-component-definition": [2,{"namedComponents": "arrow-function","unnamedComponents": "arrow-function"}]
+        "react/function-component-definition": [2,{"namedComponents": "arrow-function","unnamedComponents": "arrow-function"}],
+        "react/jsx-max-depth" : 0
     }
 }
