--- a/express/package.json
+++ b/express/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon src/server.js",
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,8 +13,7 @@
   "dependencies": {
     "express": "^4.17.3",
     "mongodb": "^4.4.1",
-    "mongoose": "^6.2.7",
-    "nodemon": "^2.0.15"
+    "mongoose": "^6.2.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -22,6 +22,7 @@
     "eslint": "^8.11.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-node": "^11.1.0"
+    "eslint-plugin-node": "^11.1.0",
+    "nodemon": "^2.0.15"
   }
 }
